solved image size problem

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     .image img{
       cursor: pointer;
       float: left;
+      width: 50%;
     }
     .blenderImageNormal img{
       transform-origin: top left;
@@ -325,7 +326,7 @@
 
   <script type="text/javascript">
     
-    $(".image img").width(($(window).width() / 2)-8.5);
+    //$(".image img").width(($(window).width() / 2)-8.5);
 
     $("#blenderImage").hover(
     function () {
